[gd_scene load_steps=7 format=3 uid="uid://d1m6ynlat4i17"]

[ext_resource type="Script" uid="uid://buxel54re47t0" path="res://scripts/desk_ui.gd" id="1_0lpkg"]
[ext_resource type="Texture2D" uid="uid://dy27xv0nry1u5" path="res://assets/inventory/inventory_slot.png" id="2_wh7hr"]
[ext_resource type="FontFile" uid="uid://peup0qkkjxsi" path="res://assets/Fonts/PixelOperator8.ttf" id="3_kgbvl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kgbvl"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
texture = ExtResource("2_wh7hr")

[sub_resource type="Gradient" id="Gradient_kgbvl"]
offsets = PackedFloat32Array(0.954839, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xfma4"]
gradient = SubResource("Gradient_kgbvl")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="DeskUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lpkg")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 10
layout_mode = 0
offset_right = 400.0
offset_bottom = 320.0
pivot_offset = Vector2(10, 10)
theme_override_styles/panel = SubResource("StyleBoxTexture_kgbvl")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LeftButtonsVBox" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="CenterVBox" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/CenterVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PageControls" type="HBoxContainer" parent="PanelContainer/HBoxContainer/CenterVBox"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="PanelContainer/HBoxContainer/CenterVBox/PageControls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kgbvl")
theme_override_font_sizes/font_size = 8
text = "Prev"

[node name="Spacer" type="Control" parent="PanelContainer/HBoxContainer/CenterVBox/PageControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="PanelContainer/HBoxContainer/CenterVBox/PageControls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kgbvl")
theme_override_font_sizes/font_size = 8
text = "Next"

[node name="CloseButton" type="Button" parent="."]
z_index = 10
layout_mode = 0
offset_left = -8.0
offset_top = -29.0
offset_right = 18.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0.764706, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "x"
flat = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(200, 160)
scale = Vector2(6.25, 5)
texture = SubResource("GradientTexture2D_xfma4")

[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterVBox/PageControls/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/CenterVBox/PageControls/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
